# generics

./: .gitignore  CMakeLists.txt  README.md  glossary.md  run.sh  setup.sh
generics/: CMakeLists.txt
generics/src/: stack_test.c
generics/tst/: main.cc  misc.cc  stack.cc  stackt.cc
inc/: generics.h  linkedList.h  linkedlist.h  misc.h  searchArray.h  stack.h  tt.h  ttFIFO.h  ttSet.h  ttconfig.h  ttlinkedlist.h  ttmemory.h  ttmiscArray.h  ttsearchArray.h  ttstack.h  ttswissCheese.h  ttutil.h  types.h
sandbox/: sandbox.c
src/: linkedlist.c  misc.c  searchArray.c  stack.c  ttFIFO.c  ttSet.c  ttlinkedlist.c  ttmemory.c  ttmiscArray.c  ttstack.c  ttswissCheese.c
tst/: linkedlist_test.cc  main.cc  misct.cc  stackt.cc  ttFIFO_test.cc  ttMiscArray_test.cc  ttSet_test.cc  ttlinkedlist_test.cc  ttmemory_test.cc  ttmisc_array_test.cc  ttstack_test.cc  ttswiss_test.cc
